tests/fixtures/invalid/min_bool_dict.py
# Cannot call min() with Bool, Dict[str, int]
x = min(True, {"a": 1})
